force-app/main/default/objects/RTV_LF_Order__c/RTV_LF_Order__c.object-meta.xml
<CustomObject>
    <label>RTV LF Order</label>
    <nameField>
        <label>LF Order Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV LF Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>