force-app/main/default/objects/RTV_LF_Order__c/fields/Application_Box_QTY__c.field-meta.xml
<CustomField>
    <fullName>Application_Box_QTY__c</fullName>
    <description>申请箱数</description>
    <label>Application Box QTY</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>