force-app/main/default/objects/RTV_LF_Order__c/fields/Application_QTY__c.field-meta.xml
<CustomField>
    <fullName>Application_QTY__c</fullName>
    <label>Application QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>