force-app/main/default/objects/RTV_LF_Order__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <description>到货日</description>
    <inlineHelpText>到货日</inlineHelpText>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>