force-app/main/default/objects/RTV_LF_Order__c/fields/Box_QTY__c.field-meta.xml
<CustomField>
    <fullName>Box_QTY__c</fullName>
    <label>Box QTY</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>