force-app/main/default/objects/RTV_LF_Order__c/fields/Box_Size__c.field-meta.xml
<CustomField>
    <fullName>Box_Size__c</fullName>
    <label>Box Size</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>