force-app/main/default/objects/RTV_LF_Order__c/fields/BU_2__c.field-meta.xml
<CustomField>
    <fullName>BU_2__c</fullName>
    <label>BU-2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>