force-app/main/default/objects/RTV_LF_Order__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>提货日</description>
    <inlineHelpText>提货日</inlineHelpText>
    <label>Pick Up Date</label>
    <type>Date</type>
</CustomField>