force-app/main/default/objects/RTV_LF_Order__c/fields/Delivery_Diff_QTY__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Diff_QTY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delivery Diff QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>