force-app/main/default/objects/RTV_LF_Order__c/fields/LF_Order_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>LF_Order_Auth_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LF Order Auth Code</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>