force-app/main/default/objects/RTV_LF_Order__c/fields/RTV_Order__c.field-meta.xml
<CustomField>
    <fullName>RTV_Order__c</fullName>
    <label>RTV Order</label>
    <referenceTo>RTV_Order__c</referenceTo>
    <relationshipLabel>RTV LF Orders</relationshipLabel>
    <relationshipName>RTV_LF_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>