force-app/main/default/objects/RTV_LF_Order__c/validationRules/NotChangeName.validationRule-meta.xml
<ValidationRule>
    <fullName>NotChangeName</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please don&apos;t change the Name</errorMessage>
</ValidationRule>